--- a/ProTrips/src/App.css
+++ b/ProTrips/src/App.css
@@ -21,34 +21,38 @@ nav a:hover {
 
 .content {
   margin-top: 80px; 
-  margin-left: 600px;
+  margin-left: 650px;
   height: calc(100vh - 60px); 
   color: black;
 }
 
 form {
   width: 350px;
-  padding: 30px 20px; 
+  padding: 30px 20px;
   border: 1px solid #ccc;
   background-color: #fff;
 }
 
-input[type="text"] {
+.input-container {
+  margin-bottom: 10px;
+}
+
+input[type='text'] {
   padding: 15px;
   border: 1px solid #ccc;
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
   width: calc(100% - 20px);
   box-sizing: border-box;
   background-color: #ebebe0;
 }
 
-button[type="submit"] {
-  background-color: #4CAF50;
+button[type='submit'] {
+  background-color: #4caf50;
   color: white;
   padding: 15px 30px;
   border-radius: 0px;
   cursor: pointer;
-  margin-top: 20px;
+  margin-top: 10px;
   width: 93%;
 }
 
@@ -60,3 +64,9 @@ button[type="submit"] {
   border-radius: 5px;
 }
 
+.error {
+  color: red;
+  text-align: left;
+  margin-bottom: 15px;
+  padding-left: 11px;
+}
